[package]
name = "rackup"
version = "0.1.0"
authors = ["Charlie Pitkin <charlie.pitkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procfs = "0.7.7"
reqwest = { version = "0.10", features = ["blocking", "json"] }
